src/MLGrammarParser.py
# Generated from MLGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MLGrammarParser ( Parser ):

    grammarFileName = "MLGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "WS", "CM", 
                      "MOSTRAR", "BAYES", "REGRESION", "KNN", "SVM", "ARBOL", 
                      "BOSQUE", "AUTOMATICO", "ENTRENAMIENTO", "USANDO", 
                      "PREDICCION", "EFECTIVIDAD", "GRAFICA", "MANUAL", 
                      "CON", "MODELOS", "GENERARDATOS", "TOKEN_Y", "TOKEN_X", 
                      "GOTAS", "CIRCULOS", "LUNAS", "MATRIZ", "VERARBOL", 
                      "DIVIDIR", "PREPARARENTRENAMIENTO", "ID", "CADENA", 
                      "ENTERO" ]

    RULE_inicio = 0
    RULE_comandos = 1
    RULE_leer = 2
    RULE_aleatorio = 3
    RULE_tipos = 4
    RULE_mostrar = 5
    RULE_indice = 6
    RULE_defmodelo = 7
    RULE_modelos = 8
    RULE_entrenar = 9
    RULE_predecir = 10
    RULE_efectividad = 11
    RULE_grafica = 12
    RULE_manual = 13
    RULE_ayudas = 14
    RULE_matriz = 15
    RULE_verarbol = 16
    RULE_dividir = 17
    RULE_dividirh = 18
    RULE_preparar = 19

    ruleNames =  [ "inicio", "comandos", "leer", "aleatorio", "tipos", "mostrar", 
                   "indice", "defmodelo", "modelos", "entrenar", "predecir", 
                   "efectividad", "grafica", "manual", "ayudas", "matriz", 
                   "verarbol", "dividir", "dividirh", "preparar" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    WS=3
    CM=4
    MOSTRAR=5
    BAYES=6
    REGRESION=7
    KNN=8
    SVM=9
    ARBOL=10
    BOSQUE=11
    AUTOMATICO=12
    ENTRENAMIENTO=13
    USANDO=14
    PREDICCION=15
    EFECTIVIDAD=16
    GRAFICA=17
    MANUAL=18
    CON=19
    MODELOS=20
    GENERARDATOS=21
    TOKEN_Y=22
    TOKEN_X=23
    GOTAS=24
    CIRCULOS=25
    LUNAS=26
    MATRIZ=27
    VERARBOL=28
    DIVIDIR=29
    PREPARARENTRENAMIENTO=30
    ID=31
    CADENA=32
    ENTERO=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandos(self):
            return self.getTypedRuleContext(MLGrammarParser.ComandosContext,0)


        def getRuleIndex(self):
            return MLGrammarParser.RULE_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicio" ):
                listener.enterInicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicio" ):
                listener.exitInicio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInicio" ):
                return visitor.visitInicio(self)
            else:
                return visitor.visitChildren(self)




    def inicio(self):

        localctx = MLGrammarParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.comandos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leer(self):
            return self.getTypedRuleContext(MLGrammarParser.LeerContext,0)


        def comandos(self):
            return self.getTypedRuleContext(MLGrammarParser.ComandosContext,0)


        def aleatorio(self):
            return self.getTypedRuleContext(MLGrammarParser.AleatorioContext,0)


        def mostrar(self):
            return self.getTypedRuleContext(MLGrammarParser.MostrarContext,0)


        def defmodelo(self):
            return self.getTypedRuleContext(MLGrammarParser.DefmodeloContext,0)


        def entrenar(self):
            return self.getTypedRuleContext(MLGrammarParser.EntrenarContext,0)


        def predecir(self):
            return self.getTypedRuleContext(MLGrammarParser.PredecirContext,0)


        def efectividad(self):
            return self.getTypedRuleContext(MLGrammarParser.EfectividadContext,0)


        def grafica(self):
            return self.getTypedRuleContext(MLGrammarParser.GraficaContext,0)


        def manual(self):
            return self.getTypedRuleContext(MLGrammarParser.ManualContext,0)


        def matriz(self):
            return self.getTypedRuleContext(MLGrammarParser.MatrizContext,0)


        def verarbol(self):
            return self.getTypedRuleContext(MLGrammarParser.VerarbolContext,0)


        def dividir(self):
            return self.getTypedRuleContext(MLGrammarParser.DividirContext,0)


        def preparar(self):
            return self.getTypedRuleContext(MLGrammarParser.PrepararContext,0)


        def getRuleIndex(self):
            return MLGrammarParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = MLGrammarParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comandos)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.leer()
                self.state = 43
                self.comandos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.aleatorio()
                self.state = 46
                self.comandos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.mostrar()
                self.state = 49
                self.comandos()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.defmodelo()
                self.state = 52
                self.comandos()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.entrenar()
                self.state = 55
                self.comandos()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.predecir()
                self.state = 58
                self.comandos()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.efectividad()
                self.state = 61
                self.comandos()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 63
                self.grafica()
                self.state = 64
                self.comandos()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 66
                self.manual()
                self.state = 67
                self.comandos()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 69
                self.matriz()
                self.state = 70
                self.comandos()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 72
                self.verarbol()
                self.state = 73
                self.comandos()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 75
                self.dividir()
                self.state = 76
                self.comandos()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 78
                self.preparar()
                self.state = 79
                self.comandos()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLGrammarParser.ID, 0)

        def CADENA(self):
            return self.getToken(MLGrammarParser.CADENA, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_leer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeer" ):
                listener.enterLeer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeer" ):
                listener.exitLeer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeer" ):
                return visitor.visitLeer(self)
            else:
                return visitor.visitChildren(self)




    def leer(self):

        localctx = MLGrammarParser.LeerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_leer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MLGrammarParser.ID)
            self.state = 85
            self.match(MLGrammarParser.T__0)
            self.state = 86
            self.match(MLGrammarParser.CADENA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AleatorioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLGrammarParser.ID)
            else:
                return self.getToken(MLGrammarParser.ID, i)

        def TOKEN_Y(self):
            return self.getToken(MLGrammarParser.TOKEN_Y, 0)

        def GENERARDATOS(self):
            return self.getToken(MLGrammarParser.GENERARDATOS, 0)

        def ENTERO(self):
            return self.getToken(MLGrammarParser.ENTERO, 0)

        def tipos(self):
            return self.getTypedRuleContext(MLGrammarParser.TiposContext,0)


        def getRuleIndex(self):
            return MLGrammarParser.RULE_aleatorio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAleatorio" ):
                listener.enterAleatorio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAleatorio" ):
                listener.exitAleatorio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAleatorio" ):
                return visitor.visitAleatorio(self)
            else:
                return visitor.visitChildren(self)




    def aleatorio(self):

        localctx = MLGrammarParser.AleatorioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aleatorio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(MLGrammarParser.ID)
            self.state = 89
            self.match(MLGrammarParser.TOKEN_Y)
            self.state = 90
            self.match(MLGrammarParser.ID)
            self.state = 91
            self.match(MLGrammarParser.T__0)
            self.state = 92
            self.match(MLGrammarParser.GENERARDATOS)
            self.state = 93
            self.match(MLGrammarParser.ENTERO)
            self.state = 94
            self.tipos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TiposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LUNAS(self):
            return self.getToken(MLGrammarParser.LUNAS, 0)

        def CIRCULOS(self):
            return self.getToken(MLGrammarParser.CIRCULOS, 0)

        def GOTAS(self):
            return self.getToken(MLGrammarParser.GOTAS, 0)

        def CON(self):
            return self.getToken(MLGrammarParser.CON, 0)

        def ENTERO(self):
            return self.getToken(MLGrammarParser.ENTERO, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_tipos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipos" ):
                listener.enterTipos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipos" ):
                listener.exitTipos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipos" ):
                return visitor.visitTipos(self)
            else:
                return visitor.visitChildren(self)




    def tipos(self):

        localctx = MLGrammarParser.TiposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipos)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(MLGrammarParser.LUNAS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(MLGrammarParser.CIRCULOS)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.match(MLGrammarParser.GOTAS)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.match(MLGrammarParser.GOTAS)
                self.state = 100
                self.match(MLGrammarParser.CON)
                self.state = 101
                self.match(MLGrammarParser.ENTERO)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MostrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR(self):
            return self.getToken(MLGrammarParser.MOSTRAR, 0)

        def ID(self):
            return self.getToken(MLGrammarParser.ID, 0)

        def indice(self):
            return self.getTypedRuleContext(MLGrammarParser.IndiceContext,0)


        def getRuleIndex(self):
            return MLGrammarParser.RULE_mostrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMostrar" ):
                listener.enterMostrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMostrar" ):
                listener.exitMostrar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMostrar" ):
                return visitor.visitMostrar(self)
            else:
                return visitor.visitChildren(self)




    def mostrar(self):

        localctx = MLGrammarParser.MostrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mostrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MLGrammarParser.MOSTRAR)
            self.state = 105
            self.match(MLGrammarParser.ID)
            self.state = 106
            self.indice()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CON(self):
            return self.getToken(MLGrammarParser.CON, 0)

        def ENTERO(self):
            return self.getToken(MLGrammarParser.ENTERO, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_indice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndice" ):
                listener.enterIndice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndice" ):
                listener.exitIndice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndice" ):
                return visitor.visitIndice(self)
            else:
                return visitor.visitChildren(self)




    def indice(self):

        localctx = MLGrammarParser.IndiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_indice)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MLGrammarParser.CON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(MLGrammarParser.CON)
                self.state = 109
                self.match(MLGrammarParser.ENTERO)
                pass
            elif token in [MLGrammarParser.EOF, MLGrammarParser.MOSTRAR, MLGrammarParser.ENTRENAMIENTO, MLGrammarParser.EFECTIVIDAD, MLGrammarParser.GRAFICA, MLGrammarParser.MANUAL, MLGrammarParser.MATRIZ, MLGrammarParser.VERARBOL, MLGrammarParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefmodeloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLGrammarParser.ID, 0)

        def modelos(self):
            return self.getTypedRuleContext(MLGrammarParser.ModelosContext,0)


        def getRuleIndex(self):
            return MLGrammarParser.RULE_defmodelo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefmodelo" ):
                listener.enterDefmodelo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefmodelo" ):
                listener.exitDefmodelo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefmodelo" ):
                return visitor.visitDefmodelo(self)
            else:
                return visitor.visitChildren(self)




    def defmodelo(self):

        localctx = MLGrammarParser.DefmodeloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_defmodelo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MLGrammarParser.ID)
            self.state = 114
            self.match(MLGrammarParser.T__0)
            self.state = 115
            self.modelos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BAYES(self):
            return self.getToken(MLGrammarParser.BAYES, 0)

        def KNN(self):
            return self.getToken(MLGrammarParser.KNN, 0)

        def REGRESION(self):
            return self.getToken(MLGrammarParser.REGRESION, 0)

        def SVM(self):
            return self.getToken(MLGrammarParser.SVM, 0)

        def ARBOL(self):
            return self.getToken(MLGrammarParser.ARBOL, 0)

        def BOSQUE(self):
            return self.getToken(MLGrammarParser.BOSQUE, 0)

        def AUTOMATICO(self):
            return self.getToken(MLGrammarParser.AUTOMATICO, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_modelos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelos" ):
                listener.enterModelos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelos" ):
                listener.exitModelos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelos" ):
                return visitor.visitModelos(self)
            else:
                return visitor.visitChildren(self)




    def modelos(self):

        localctx = MLGrammarParser.ModelosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_modelos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MLGrammarParser.BAYES) | (1 << MLGrammarParser.REGRESION) | (1 << MLGrammarParser.KNN) | (1 << MLGrammarParser.SVM) | (1 << MLGrammarParser.ARBOL) | (1 << MLGrammarParser.BOSQUE) | (1 << MLGrammarParser.AUTOMATICO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntrenarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTRENAMIENTO(self):
            return self.getToken(MLGrammarParser.ENTRENAMIENTO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLGrammarParser.ID)
            else:
                return self.getToken(MLGrammarParser.ID, i)

        def USANDO(self):
            return self.getToken(MLGrammarParser.USANDO, 0)

        def CON(self):
            return self.getToken(MLGrammarParser.CON, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_entrenar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrenar" ):
                listener.enterEntrenar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrenar" ):
                listener.exitEntrenar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntrenar" ):
                return visitor.visitEntrenar(self)
            else:
                return visitor.visitChildren(self)




    def entrenar(self):

        localctx = MLGrammarParser.EntrenarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_entrenar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MLGrammarParser.ENTRENAMIENTO)
            self.state = 120
            self.match(MLGrammarParser.ID)
            self.state = 121
            self.match(MLGrammarParser.USANDO)
            self.state = 122
            self.match(MLGrammarParser.ID)
            self.state = 123
            self.match(MLGrammarParser.CON)
            self.state = 124
            self.match(MLGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredecirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLGrammarParser.ID)
            else:
                return self.getToken(MLGrammarParser.ID, i)

        def PREDICCION(self):
            return self.getToken(MLGrammarParser.PREDICCION, 0)

        def USANDO(self):
            return self.getToken(MLGrammarParser.USANDO, 0)

        def getRuleIndex(self):
            return MLGrammarParser.RULE_predecir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredecir" ):
                listener.enterPredecir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredecir" ):
                listener.exitPredecir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredecir" ):
                return visitor.visitPredecir(self)
            else:
                return visitor.visitChildren(self)




    def predecir(self):
